[package]
name = "acp-nats-agent"
version = "0.0.1"
edition = "2024"

[lints]
workspace = true

[dependencies]
acp-nats = { workspace = true }
agent-client-protocol = { workspace = true, features = [
    "unstable_auth_methods",
    "unstable_boolean_config",
    "unstable_cancel_request",
    "unstable_message_id",
    "unstable_session_close",
    "unstable_session_fork",
    "unstable_session_model",
    "unstable_session_resume",
    "unstable_session_usage",
] }
async-nats = { workspace = true, features = ["jetstream"] }
async-trait = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "sync"] }
tracing = { workspace = true }
trogon-nats = { workspace = true }
trogon-std = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tracing-subscriber = { workspace = true, features = ["fmt"] }
trogon-nats = { workspace = true, features = ["test-support"] }
trogon-std = { workspace = true, features = ["test-support"] }
