[package]
name = "acp-nats-stdio"
version = "0.0.1"
edition = "2024"

[lints]
workspace = true

[dependencies]
acp-nats = { workspace = true }
acp-telemetry = { workspace = true }
agent-client-protocol = { workspace = true }
async-compat = { workspace = true }
async-nats = { workspace = true }
clap = { workspace = true, features = ["env"] }
futures = { workspace = true }
opentelemetry = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal", "io-std"] }
tracing = { workspace = true }
trogon-std = { workspace = true, features = ["clap"] }

[dev-dependencies]
serde_json = { workspace = true }
testcontainers-modules = { version = "0.8.0", features = ["nats"] }
trogon-nats = { workspace = true, features = ["test-support"] }
tracing-subscriber = { workspace = true, features = ["fmt"] }
trogon-std = { workspace = true, features = ["test-support"] }
