[package]
name = "acp-nats-stdio"
version = "0.0.1"
edition = "2024"

[lints]
workspace = true

[dependencies]
acp-nats = { workspace = true }
acp-telemetry = { workspace = true }
agent-client-protocol = { workspace = true }
async-compat = { workspace = true }
async-nats = { workspace = true }
clap = { workspace = true, features = ["env"] }
futures = { workspace = true }
opentelemetry = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal", "io-std"] }
tracing = { workspace = true }
trogon-nats = { workspace = true }
trogon-std = { workspace = true, features = ["clap"] }

[dev-dependencies]
acp-nats-agent = { path = "../acp-nats-agent" }
async-nats = { workspace = true, features = ["jetstream"] }
bytes = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde_json = { workspace = true }
testcontainers-modules = { workspace = true }
trogon-acp-runner = { path = "../trogon-acp-runner" }
trogon-agent-core = { path = "../trogon-agent-core" }
trogon-nats = { workspace = true, features = ["test-support"] }
tracing-subscriber = { workspace = true, features = ["fmt"] }
trogon-std = { workspace = true, features = ["test-support"] }
