[package]
name = "acp-nats-ws"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
acp-nats = { workspace = true }
acp-telemetry = { workspace = true }
agent-client-protocol = { workspace = true }
async-compat = { workspace = true }
async-nats = { workspace = true }
axum = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true, features = ["env"] }
futures-util = { workspace = true, features = ["sink"] }
opentelemetry = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal", "net", "sync", "io-util"] }
tracing = { workspace = true }
trogon-nats = { workspace = true }
trogon-std = { workspace = true, features = ["telemetry-http"] }

[dev-dependencies]
serde_json = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt"] }
trogon-nats = { workspace = true, features = ["test-support"] }
trogon-std = { workspace = true, features = ["test-support"] }
