[package]
name = "acp-nats-ws"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
acp-nats = { workspace = true }
acp-telemetry = { workspace = true }
agent-client-protocol = { workspace = true }
async-compat = { workspace = true }
async-nats = { workspace = true }
axum = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true, features = ["env"] }
futures-util = { workspace = true, features = ["sink"] }
opentelemetry = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal", "net", "sync", "io-util"] }
tracing = { workspace = true }
trogon-nats     = { workspace = true }
trogon-registry = { workspace = true }
trogon-std      = { workspace = true, features = ["telemetry-http"] }

[dev-dependencies]
serde_json = { workspace = true }
testcontainers-modules = { version = "0.15", features = ["nats"] }
tokio-tungstenite = { workspace = true }
acp-nats-agent    = { path = "../acp-nats-agent" }
reqwest           = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
trogon-acp-runner   = { path = "../trogon-acp-runner" }
trogon-agent-core   = { path = "../trogon-agent-core" }
trogon-xai-runner   = { path = "../trogon-xai-runner", features = ["test-helpers"] }
trogon-codex-runner = { path = "../trogon-codex-runner" }
trogon-nats = { workspace = true, features = ["test-support"] }
trogon-registry = { workspace = true, features = ["test-support"] }
tracing-subscriber = { workspace = true, features = ["fmt"] }
trogon-std = { workspace = true, features = ["test-support"] }
