[package]
name = "acp-nats"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
agent-client-protocol = { version = "0.10.2", features = [
    "unstable_auth_methods",
    "unstable_boolean_config",
    "unstable_cancel_request",
    "unstable_message_id",
    "unstable_session_close",
    "unstable_session_fork",
    "unstable_session_model",
    "unstable_session_resume",
    "unstable_session_usage",
] }
opentelemetry = "0.31.0"
async-nats = { version = "0.46.0", default-features = false }
async-trait = "0.1.89"
bytes = "1.11"
futures = "0.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["rt", "macros", "sync", "time"] }
tracing = "0.1.44"
uuid = { version = "1", features = ["v4"] }

trogon-nats = { path = "../trogon-nats" }
trogon-std = { path = "../trogon-std" }

[dev-dependencies]
futures = "0.3"
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio", "metrics", "testing"] }
testcontainers-modules = { version = "0.8", features = ["nats"] }
tokio = { version = "1.50.0", features = ["test-util"] }
tracing-subscriber = { version = "0.3.23", features = ["fmt"] }
trogon-nats = { path = "../trogon-nats", features = ["test-support"] }
trogon-std = { path = "../trogon-std", features = ["test-support"] }
