[package]
name = "acp-nats"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[lints]
workspace = true

[dependencies]
thiserror = { workspace = true }
agent-client-protocol = { workspace = true }
agent-client-protocol-schema = { workspace = true }
opentelemetry = { workspace = true }
async-nats = { workspace = true, features = ["jetstream"] }
async-trait = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "sync", "time"] }
tracing = { workspace = true }
uuid = { workspace = true }

jsonrpc-nats = { workspace = true }
trogon-semconv = { workspace = true }
trogon-nats = { workspace = true }
trogon-std = { workspace = true }

[dev-dependencies]
async-compat = { workspace = true }
opentelemetry_sdk = { workspace = true, features = ["rt-tokio", "metrics", "testing"] }
tokio = { workspace = true, features = ["test-util"] }
tracing-subscriber = { workspace = true, features = ["fmt"] }
trogon-nats = { workspace = true, features = ["test-support"] }
trogon-std = { workspace = true, features = ["test-support"] }
