[package]
name = "ard-nats"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "NATS storage and indexing primitives for ARD catalogs"
publish = false

[lints]
workspace = true

[dependencies]
ard-catalog = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
trogon-nats = { workspace = true }
