[package]
name = "ard-registry"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "ARD-compatible HTTP registry runtime"
publish = false

[lints]
workspace = true

[features]
test-support = []

[dependencies]
ard-catalog = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread"] }
tower-http = { workspace = true, features = ["trace"] }

[dev-dependencies]
ard-catalog = { workspace = true }
serde_json = { workspace = true }
tower = { workspace = true, features = ["util"] }
