[package]
name = "discord-bot"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "discord-bot"
path = "src/main.rs"

[dependencies]
discord-types = { path = "../discord-types" }
discord-nats = { path = "../discord-nats" }
serenity = { version = "0.12", default-features = false, features = [
    "client",
    "gateway",
    "model",
    "cache",
    "http",
    "rustls_backend",
] }
async-nats = "0.45"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive", "env"] }
anyhow = "1.0"
thiserror = "2.0"
axum = "0.7"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

[dev-dependencies]
tempfile = "3"
futures = "0.3"
