[package]
name = "discord-nats"
version = "0.1.0"
edition = "2021"

[dependencies]
async-nats = "0.45"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
thiserror = "2.0"
anyhow = "1.0"

[dev-dependencies]
uuid = { version = "1", features = ["v4"] }
